--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
+  padding-top: 70px;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -619,4 +620,24 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+.slogan {
+  position: absolute;
+  width: 399.08px;
+  height: 111px;
+  left: 221.93px;
+  top: 149.15px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 47.5714px;
+  line-height: 56px;
+
+  color: #FFFFFF;
+
+  border: 2px solid #4B453F;
+  transform: rotate(-4.81deg);
+  background-image: url("../assets/header01.svg")
 }
