--- a/src/components/needmask.scss
+++ b/src/components/needmask.scss
@@ -12,6 +12,7 @@ select{
     }
 }
 
+
 .narbar-content {
     max-width: 1120px;
     display: flex;
@@ -159,11 +160,35 @@ select{
 .block01 {
     .search {
         margin-bottom: 30px;
+        max-width: 800px;
+        margin: 30px auto;
+        .select-group{
+            display: flex;
+            flex-wrap: wrap;
+            select{
+                flex:1;
+                @include breakpoint(sm){
+                    margin-right: 5px;  
+                   }
+            }
+        }
 
+        .note {
+            color: $nmAlert;
+            font-size: .8em;
+            margin-top: 15px;
+            @include breakpoint(md) {
+                width: 100%;
+            }
+        }
+        
         span {
             display: inline-block;
             width: 1em;
             height: auto;
+            @include breakpoint(sm){
+                width: 0;
+            }
         }
     }
 
@@ -173,34 +198,17 @@ select{
 }
 
 .block02 {
-    .sort {
-        margin-bottom: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
 
-        @include breakpoint(md) {
-            flex-direction: column;
-            justify-content: flex-end;
+    .sort {
+        margin-top: 30px;
+        @include breakpoint(sm){
+            margin-bottom: 15px;
         }
 
         p {
             margin-bottom: 0;
-        }
-
-
-
-        .note {
-            color: $nmAlert;
             
-
-            @include breakpoint(md) {
-                margin-bottom: 15px;
-                font-size: .8em;
-                width: 100%;
-            }
         }
-
         .sort-item {
             display: flex;
             align-items: center;
@@ -212,7 +220,16 @@ select{
             }
 
             select {
-                width: 250px;
+                max-width: 120px;
+                border: initial;
+                color: $nmGray;
+                &:focus{
+                    box-shadow: initial;
+                }
+                @include breakpoint(sm){
+                    max-width: 100px;
+                    font-size: 1em;
+                }
             }
         }
     }
@@ -227,7 +244,6 @@ select{
         padding: 1em 0;
         display: flex;
         align-items: flex-end;
-        border-top: 1px solid rgba($nmGray, $alpha: .25);
 
         @include breakpoint(md) {
             display: none;
@@ -257,6 +273,12 @@ select{
     .item-content-group {
         padding-top: 30px;
     }
+
+    .title{
+        @include breakpoint(sm){
+            font-size: 1.5em;
+        }
+    }
     .desc {
         padding-right: 15px;
     padding-left: 15px;
@@ -264,11 +286,16 @@ select{
         @include breakpoint(md) {
             margin-bottom: 10px;
         }
+
+        @include breakpoint(sm) {
+            margin-bottom: 0px;
+            font-size: .8em;
+        }
     }
 
 
     a.item {
-
+        margin-bottom: 30px;
         color: $gray-700;
 
         &:focus {
@@ -289,51 +316,91 @@ select{
             border: 1px solid $nmGray;
             border-radius: 4px;
             padding: 1em 0;
+            @include breakpoint(sm){
+                border: initial;
+                border-radius: initial;
+            }
 
-            .number {
-                font-size: 3em;
-                font-weight: 300;
+            .detail{
                 display: flex;
-                align-items: flex-end;
-
-                p {
-                    margin-bottom: 0;
+                .number {
+                    font-size: 3em;
+                    font-weight: 300;
                     display: flex;
-                    align-self: center;
+                    align-items: flex-end;
+                    @include breakpoint(sm){
+                        font-size: 2em;
+                    }
+    
+                    p {
+                        margin-bottom: 0;
+                        display: flex;
+                        align-self: center;
+                    }
+    
+                    span {
+                        display: none;
+    
+                        @include breakpoint(md) {
+                            background-color: $nmYellow;
+                            border-radius: 100px;
+                            width: 30px;
+                            height: 30px;
+                            font-size: 12px;
+                            font-weight: bold;
+                            display: inline-flex;
+                            align-items: center;
+                            justify-content: center;
+                            margin-top: 30px;
+                            margin-right: 5px;
+                        }
+                        @include breakpoint(sm){
+                            margin-top: 10px;
+                        }
+                    }
                 }
-
-                span {
-                    display: none;
-
-                    @include breakpoint(md) {
-                        background-color: $nmYellow;
-                        border-radius: 100px;
+    
+    
+                .map {
+                    display: flex;
+                    align-items: center;
+    
+                    svg {
                         width: 30px;
                         height: 30px;
-                        font-size: 12px;
-                        font-weight: bold;
-                        display: inline-flex;
-                        align-items: center;
-                        justify-content: center;
-                        margin-top: 30px;
-                        margin-right: 5px;
+                        margin: 1em 0;
+                        @include breakpoint(sm){
+                            margin: 0;
+                        }
                     }
                 }
             }
 
-
-            .map {
-                display: flex;
-                align-items: center;
-
-                svg {
-                    width: 30px;
-                    height: 30px;
-                    margin: 1em 0;
+            .time{
+                
+                .title{
+                    margin-bottom: 0;
+                    padding-right: 0;
+                    @include breakpoint(sm){
+                        font-size: 1em;
+                    }
+                }
+                .desc{
+                    font-size: .8em;
                 }
             }
+            
         }
 
+    }
+
+    .item-bottom-space{
+        display: block;
+        height: 30px;
+        width: 30px;
+        @include breakpoint(sm){
+            height: 15px;
+        }
     }
 }
 
