--- a/src/components/needmask.scss
+++ b/src/components/needmask.scss
@@ -376,6 +376,10 @@ select{
                 }
             }
 
+            .hide{
+                display: none;
+            }
+
             .time{
                 
                 .title{
