--- a/src/components/needmask.scss
+++ b/src/components/needmask.scss
@@ -39,17 +39,9 @@ select{
             color: $nmGray;
             position: relative;
 
-            &:before {
-                content: " ";
-                width: 10px;
-                height: 100px;
-                background-color: $nmYellow;
-                position: absolute;
-                top: 30px;
-                left: -30px;
-            }
+            
 
-            a {
+            .close {
                 align-self: flex-end;
                 display: block;
                 position: relative;
@@ -93,12 +85,55 @@ select{
                 font-size: .85em;
                 font-weight: 300;
             }
+
+            ul{
+                display: flex;
+                padding: 0;
+                margin-left: 0;
+                li{
+                    flex: 1;
+                    padding-right: 5px;
+                    
+                    a,a:link,a:active{
+                        text-align: center;
+                        color: white;
+                        display: block;
+                        border-radius: 4px;
+                        padding: 5px 10px;
+                    }
+                }
+
+                li:nth-child(1){
+                    a,a:link,a:active{
+                        background-color: #3b5998;
+                        &:hover{
+                            background-color: lighten(#3b5998, $amount: 10%);
+                        }
+                    }
+                }
+                li:nth-child(2){
+                    a,a:link,a:active{
+                        background-color: #e4405f;
+                        &:hover{
+                            background-color: lighten(#e4405f, $amount: 10%);
+                        }
+                    }
+                }
+                li:nth-child(3){
+                    a,a:link,a:active{
+                        background-color: #02b875;
+                        &:hover{
+                            background-color: lighten(#02b875, $amount: 10%);
+                        }
+                    }
+                }
+            }
         }
     }
 }
 
 .keyview {
-    svg {
+    img {
         width: 100%;
     }
 
@@ -269,6 +304,15 @@ select{
 .block04 {
     background-color: rgba($nmYellow, $alpha: .25);
     position: relative;
+    
+    .bg{
+        position: absolute;
+        background-image: url('../images/bg.png');
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 
     .item-content-group {
         padding-top: 30px;
